# Langchain

./: .env.example  .gitignore  AI知识库助手_项目执行文档.docx  CLAUDE.md  CONTEXT.md  README.md  audit_app.py  config.py  enterprise_app.py  main.py  pyproject.toml  requirements.txt  test.py  ~$知识库助手_项目执行文档.docx
.claude/: settings.local.json
agent/: __init__.py  graph.py  tools.py
audit/: __init__.py  contract_parser.py  extractor.py  pipeline.py  report_generator.py  risk_analyzer.py
chat/: __init__.py  memory.py  session.py
docs/: enterprise-workbench.md  hotel-management-rag-plan.md  hotel-manager-product-upgrade.md
docs/adr/: 0001-review-command-architecture.md  0002-implementation-plan.md  0003-enterprise-workbench-architecture.md  0004-local-first-personal-product.md
enterprise/: __init__.py  sample_data.py
enterprise/adapters/: __init__.py  documents.py
enterprise/ai/: __init__.py  gateway.py
enterprise/core/: __init__.py  catalog.py  knowledge.py  models.py  reporting.py  secrets.py  settings.py  storage.py  workspace.py
finetune/: README.md  __init__.py  data_prep.py  dataset_info.json  train_config.yaml
rag/: __init__.py  chunker.py  embedder.py  loader.py  multimodal.py  pipeline.py  retriever.py  vectorstore.py
scripts/: rebuild_kb.py
tests/: rag_test_cases.json  run_rag_tests.py  test_enterprise_knowledge.py  test_enterprise_settings_monitoring.py  test_enterprise_workspace.py  test_hotel_dashboard_page.py  test_hotel_dashboard_service.py  test_hotel_data_workspace.py  test_onboarding_tour.py  test_rag_safety.py  test_room_metrics.py
(+14 files in other folders)
