[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-ai-workbench"
version = "0.1.0"
description = "本地优先的企业智能管理工作台"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.0,<3",
  "python-dotenv>=1.0,<2",
  "rich>=13.0,<15",
  "pygments>=2.17,<3",
  "streamlit>=1.36,<2",
  "tornado>=6.4,<7",
  "pandas>=2.1,<4",
  "openpyxl>=3.1,<4",
  "pypdf>=4.0,<7",
  "python-docx>=1.1,<2",
  "requests>=2.31,<3",
  "keyring>=25,<26; platform_system != 'Windows'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<10",
  "ruff>=0.5,<1",
]
legacy = [
  "tiktoken>=0.5",
  "langchain>=0.2",
  "langchain-core>=0.2",
  "langchain-community>=0.2",
  "langchain-text-splitters>=0.2",
  "langchain-openai>=0.1",
  "chromadb>=0.4",
  "langgraph>=0.2",
  "tavily-python>=0.3",
  "pillow>=10.0",
]

[tool.setuptools.packages.find]
include = ["enterprise*", "audit*", "chat*", "rag*", "agent*", "finetune*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["data", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]
